syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

option java_multiple_files = true;
option java_package = "com.watchtogether.grpc";
option java_outer_classname = "RoomServiceProto";

// Room service for managing watch-together rooms
service RoomService {
  // Get room by ID
  rpc GetRoomById(GetRoomByIdRequest) returns (RoomResponse);

  // Get rooms owned by specific user
  rpc GetRoomByOwnerId(GetRoomByOwnerIdRequest) returns (RoomResponse);

  // Get all public rooms
  rpc GetAllPublicRooms(google.protobuf.Empty) returns (RoomListResponse);

  // Get all rooms by category
  rpc GetRoomsByCategory(GetRoomsByCategoryRequest) returns (RoomListResponse);

  // Create new room
  rpc CreateRoom(CreateRoomRequest) returns (JoinToRoomResponse);

  // Add participant to room
  rpc AddParticipantToRoom(AddParticipantRequest) returns (JoinToRoomResponse);

  // Remove participant from room
  rpc RemoveParticipantFromRoom(RemoveParticipantRequest) returns (RemoveParticipantResponse);

  rpc GenerateInvitation(GenerateInvitationRequest) returns (GenerateInvitationResponse);

  rpc ValidateInvitation(ValidateInvitationRequest) returns (ValidateInvitationResponse);

  rpc JoinToRoomByInvite(JoinToRoomByInviteRequest) returns (JoinToRoomResponse);

}

// Requests
message GetRoomByIdRequest {
  string room_id = 1;
}

message GetRoomByOwnerIdRequest {
  string owner_id = 1;
}

message GetRoomsByCategoryRequest {
  RoomCategory room_category = 1;
}

message CreateRoomRequest {
  RoomParticipant room_creator = 1;
  string room_name = 2;
  string room_description = 3;
  RoomType room_type = 4;
  RoomCategory category = 5;
  string room_password = 6;
  int32 max_participants = 7; // 0 = unlimited
}

message AddParticipantRequest {
  string room_id = 1;
  RoomParticipant participant = 2;
  string password = 3;
}

message RemoveParticipantRequest {
  string room_id = 1;
  string participant_id = 2;
}

message GenerateInvitationRequest {
  string room_id = 1;
  string creator_id = 2;
  google.protobuf.Duration duration_secs = 3;
  int32 max_uses = 4;
}

message JoinToRoomByInviteRequest {
  string invite_code = 1;
  AddParticipantRequest request = 2;
}

// Responses
message RoomResponse {
  string room_id = 1;
  RoomParticipant room_creator = 2;
  string room_name = 3;
  string room_description = 4;
  RoomType room_type = 5;
  RoomCategory room_category = 6;
  int32 max_participants = 7;
  bool needPassword = 8;
  int32 participant_number = 9;
  google.protobuf.Timestamp created_at = 10;
}

message RoomListResponse {
  repeated RoomResponse rooms = 1;
}

message CreateRoomResponse {
  bool success = 1;
  string message = 2;
  //  RoomResponse room = 3; // populated if success = true
}

message JoinToRoomResponse {
  bool success = 1;
  string message = 2;
  string roomId = 3;
  string roomName = 4;
  string roomDescription = 5;
  RoomType room_type = 6;
  RoomCategory room_category = 7;
  int32 max_participants = 8;
  int32 participant_number = 9;
  google.protobuf.Timestamp created_at = 10;
  repeated RoomParticipant room_participants = 11;
}

message RemoveParticipantResponse {
  bool success = 1;
  string message = 2;
  int32 current_participant_count = 3;
}

message GenerateInvitationResponse {
  bool success = 1;
  string link = 2;
}

message ValidateInvitationRequest {
  string code = 1;
  string user_id = 2;
}

message ValidateInvitationResponse {
  bool success = 1;
  string message = 2;
  RoomResponse room = 3;
}

// Enums
enum RoomStatus {
  ROOM_STATUS_UNKNOWN = 0;
  ROOM_STATUS_ACTIVE = 1;
  ROOM_STATUS_PAUSED = 2;
  ROOM_STATUS_ENDED = 3;
}

enum RoomCategory {
  MOVIES = 0;
  SERIES = 1;
  ANIME = 2;
  MUSIC = 3;
  GAMING = 4;
  EDUCATION = 5;
  SPORTS = 6;
  STAND_UP = 7;
  KIDS = 8;
  ART = 9;
  TRAVEL = 10;
  COOKING = 11;
  FASHION = 12;
  LIVE = 13;
  TESTING = 14;
  SOCIAL = 15;
  OTHER = 16;
  NONE = 17;
}

enum RoomType {
  PUBLIC = 0;
  PRIVATE = 1;
}


// Другое

message RoomParticipant {
  string user_id = 1;
  string display_name = 2;
}
